Update redirect url

--- a/embe.html
+++ b/embe.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=https://www.youtube.com/YOUR_YOUTUBE_LINK_HERE">
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/CbtoiMKaKGY">
 </head>
 <body>
     <p>If you are not redirected, <a href="https://youtu.be/CbtoiMKaKGY">click here</a>.</p>
