--- a/embe.html
+++ b/embe.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <meta http-equiv="refresh" content="0; url=https://youtu.be/CbtoiMKaKGY">
+    <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
     <p>If you are not redirected, <a href="https://youtu.be/CbtoiMKaKGY">click here</a>.</p>
