--- a/embe.html
+++ b/embe.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Redirecting...</title>
-    <meta http-equiv="refresh" content="0; url=https://youtu.be/CbtoiMKaKGY">
+    <title>Từ Từ</title>
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/pC3Wmmh3N98">
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
-    <p>If you are not redirected, <a href="https://youtu.be/CbtoiMKaKGY">click here</a>.</p>
+    <p></p>
 </body>
 </html>
