--- a/embe.html
+++ b/embe.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Từ Từ</title>
-    <meta http-equiv="refresh" content="0; url=https://youtu.be/pC3Wmmh3N98">
+    <meta http-equiv="refresh" content="0; url=https://youtu.be/CHw1b_1LVBA">
     <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
